tried adding next row

--- a/index.html
+++ b/index.html
@@ -64,7 +64,26 @@
       <div class="content"> <!-- All the stuff inside the rows -->
         <div class="green-indicator"></div>
 
-  
+        <div class="inner-wrapper">
+        <h2 class="bus-number">60</h2> <!-- Column for bus number -->
+
+        <div class="location"> <!-- Column chunk for destination -->
+          <h2 class="destination-name">Randolph/Harbor Dr</h2>
+          <h3 class="direction">Eastbound</h3>
+          <h2 class="frequency">Frequency: every 20 min</h2>
+        </div>
+
+        <div class="times"> <!-- Column chunk for arrival -->
+          <h2 class="actual-time">9:45 AM</h2>
+          <h3 class="minutes">in 4 min</h3>
+        </div>
+        </div>
+
+        <div class="arrow">
+          <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
+        </div>
+      </div>
+    </div>
 
 
   </section>
