--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,900" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
 <body>
   <section class="container">
     <!-- nav bar -->
     <nav>
-      <div class="arrow-left">
-        <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
-      </div>
-
+      <img src="images/status-bar.png">
       <h1>Washington and State</h1>
     </nav>
 
@@ -54,8 +51,8 @@
         </div>
         </div>
 
-        <div class="arrow">
-          <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
+        <div class="arrow-right">
+          <i class="fa fa-angle-right" style="font-size:65px"></i>
         </div>
       </div>
     </div>
@@ -79,8 +76,8 @@
         </div>
         </div>
 
-        <div class="arrow">
-          <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
+        <div class="arrow-right">
+          <i class="fa fa-angle-right" style="font-size:65px"></i>
         </div>
       </div>
     </div>
