added new destination sections

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h2 class="arrival">Arrival</h2>
   </section>
 
+  <!-- Randolph/Harbor Dr -->
   <section class="route-list">
     <div class="grid"> <!-- Individual boxes/rows -->
       <div class="content"> <!-- All the stuff inside the rows -->
@@ -57,22 +58,49 @@
       </div>
     </div>
 
+    <!-- Navy Pier -->
     <div class="grid"> <!-- Individual boxes/rows -->
       <div class="content"> <!-- All the stuff inside the rows -->
         <div class="green-indicator"></div>
 
         <div class="inner-wrapper">
-        <h2 class="bus-number">60</h2> <!-- Column for bus number -->
+        <h2 class="bus-number">124</h2> <!-- Column for bus number -->
 
         <div class="location"> <!-- Column chunk for destination -->
-          <h2 class="destination-name">Randolph/Harbor Dr</h2>
+          <h2 class="destination-name">Navy Pier</h2>
           <h3 class="direction">Eastbound</h3>
-          <h2 class="frequency">Frequency: every 20 min</h2>
+          <h2 class="frequency">Frequency: every 10 min</h2>
         </div>
 
         <div class="times"> <!-- Column chunk for arrival -->
-          <h2 class="actual-time">9:45 AM</h2>
-          <h3 class="minutes">in 4 min</h3>
+          <h2 class="actual-time">9:52 AM</h2>
+          <h3 class="minutes">in 11 min</h3>
+        </div>
+        </div>
+
+        <div class="arrow-right">
+          <i class="fa fa-angle-right" style="font-size:65px"></i>
+        </div>
+      </div>
+    </div>
+
+    <!-- Devon/Clark -->
+    <div class="grid"> <!-- Individual boxes/rows -->
+      <div class="content"> <!-- All the stuff inside the rows -->
+        <div class="green-indicator"></div>
+
+        <div class="inner-wrapper">
+        <h2 class="bus-number">151</h2> <!-- Column for bus number -->
+
+        <div class="location"> <!-- Column chunk for destination -->
+          <h2 class="destination-name">Devon/Clark</h2>
+          <h3 class="direction">Northbound</h3>
+          <h2 class="frequency">Frequency: every 16 min</h2>
+        </div>
+
+        <div class="times"> <!-- Column chunk for arrival -->
+          <h2 class="actual-time">10:00 AM</h2>
+          <h3 class="minutes">in 19 min</h3>
         </div>
         </div>
 
