added class for 'break'

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <h2 class="actual-time">9:45 AM</h2>
           <h3 class="minutes">in 4 min</h3>
         </div>
+
+        <div class="break"></div>
+
         </div>
 
         <div class="arrow-right">
@@ -76,7 +79,10 @@
           <h2 class="actual-time">9:52 AM</h2>
           <h3 class="minutes">in 11 min</h3>
         </div>
+          <div class="break"></div>
         </div>
+
+
 
         <div class="arrow-right">
           <i class="fa fa-angle-right" style="font-size:65px"></i>
@@ -102,6 +108,7 @@
           <h2 class="actual-time">10:00 AM</h2>
           <h3 class="minutes">in 19 min</h3>
         </div>
+          <div class="break devon"></div>
         </div>
 
         <div class="arrow-right">
