--- a/index.html
+++ b/index.html
@@ -31,64 +31,65 @@
     <h2 class="arrival">Arrival</h2>
   </section>
 
-  <!-- Randolph/Harbor Dr -->
+  <!-- RANDOLPH/HARBOR DR -->
   <section class="route-list">
     <div class="grid"> <!-- Individual boxes/rows -->
       <div class="content"> <!-- All the stuff inside the rows -->
         <div class="green-indicator"></div>
 
         <div class="inner-wrapper">
-        <h2 class="bus-number">60</h2> <!-- Column for bus number -->
+          <h2 class="bus-number">60</h2> <!-- Column for bus number -->
 
-        <div class="location"> <!-- Column chunk for destination -->
-          <h2 class="destination-name">Randolph/Harbor Dr</h2>
-          <h3 class="direction">Eastbound</h3>
-          <h2 class="frequency">Frequency: every 20 min</h2>
+          <div class="location"> <!-- Column chunk for destination -->
+            <h2 class="destination-name">Randolph/Harbor Dr</h2>
+            <h3 class="direction">Eastbound</h3>
+            <h2 class="frequency">Frequency: every 20 min</h2>
+          </div>
+
+          <div class="times"> <!-- Column chunk for arrival -->
+            <h2 class="actual-time">9:45 AM</h2>
+            <h3 class="minutes">in 4 min</h3>
+          </div>
+
+          <div class="break"></div> <!-- used this to help get arrows aligned -->
+          <div class="arrow-right"> <!-- right arrow -->
+            <i class="fa fa-angle-right" style="font-size:65px"></i>
+          </div>
         </div>
 
-        <div class="times"> <!-- Column chunk for arrival -->
-          <h2 class="actual-time">9:45 AM</h2>
-          <h3 class="minutes">in 4 min</h3>
-        </div>
-
-        <div class="break"></div>
-
-        </div>
-
-        <div class="arrow-right">
-          <i class="fa fa-angle-right" style="font-size:65px"></i>
-        </div>
       </div>
     </div>
+  <!--================= END OF RANDOLPH/HARBOR DR ==========================-->
 
-    <!-- Navy Pier -->
+    <!-- NAVY PIER EASTBOUND -->
     <div class="grid"> <!-- Individual boxes/rows -->
       <div class="content"> <!-- All the stuff inside the rows -->
         <div class="green-indicator"></div>
 
         <div class="inner-wrapper">
-        <h2 class="bus-number">124</h2> <!-- Column for bus number -->
+          <h2 class="bus-number">124</h2> <!-- Column for bus number -->
 
-        <div class="location"> <!-- Column chunk for destination -->
-          <h2 class="destination-name">Navy Pier</h2>
-          <h3 class="direction">Eastbound</h3>
-          <h2 class="frequency">Frequency: every 10 min</h2>
+          <div class="location"> <!-- Column chunk for destination -->
+            <h2 class="destination-name">Navy Pier</h2>
+            <h3 class="direction">Eastbound</h3>
+            <h2 class="frequency">Frequency: every 10 min</h2>
+          </div>
+
+          <div class="times"> <!-- Column chunk for arrival -->
+            <h2 class="actual-time">9:47 AM</h2>
+            <h3 class="minutes">in 6 min</h3>
+          </div>
+
+          <div class="break"></div> <!-- used this to help get arrows aligned -->
+
+          <div class="arrow-right"> <!-- right arrow -->
+            <i class="fa fa-angle-right" style="font-size:65px"></i>
+          </div>
         </div>
 
-        <div class="times"> <!-- Column chunk for arrival -->
-          <h2 class="actual-time">9:52 AM</h2>
-          <h3 class="minutes">in 11 min</h3>
-        </div>
-          <div class="break"></div>
-        </div>
-
-
-
-        <div class="arrow-right">
-          <i class="fa fa-angle-right" style="font-size:65px"></i>
-        </div>
       </div>
     </div>
+  <!--================End of Navy Pier Eastbound ======================-->
 
     <!-- Devon/Clark -->
     <div class="grid"> <!-- Individual boxes/rows -->
@@ -96,26 +97,67 @@
         <div class="green-indicator"></div>
 
         <div class="inner-wrapper">
-        <h2 class="bus-number">151</h2> <!-- Column for bus number -->
+          <h2 class="bus-number">151</h2> <!-- Column for bus number -->
+
+          <div class="location"> <!-- Column chunk for destination -->
+            <h2 class="destination-name">Devon/Clark</h2>
+            <h3 class="direction">Northbound</h3>
+            <h2 class="frequency">Frequency: every 16 min</h2>
+          </div>
+
+          <div class="times"> <!-- Column chunk for arrival -->
+            <h2 class="actual-time">9:52 AM</h2>
+            <h3 class="minutes">in 11 min</h3>
+          </div>
+
+          <div class="break"></div> <!-- used this to help get arrows aligned -->
+
+          <div class="arrow-right"> <!-- right arrow -->
+            <i class="fa fa-angle-right" style="font-size:65px"></i>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  <!--================End of Devon/Clark ===================================-->
+
+  <!-- 103rd/Stony Island -->
+  <div class="grid"> <!-- Individual boxes/rows -->
+    <div class="content"> <!-- All the stuff inside the rows -->
+      <div class="green-indicator"></div>
+
+      <div class="inner-wrapper">
+        <h2 class="bus-number">J14</h2> <!-- Column for bus number -->
 
         <div class="location"> <!-- Column chunk for destination -->
-          <h2 class="destination-name">Devon/Clark</h2>
-          <h3 class="direction">Northbound</h3>
-          <h2 class="frequency">Frequency: every 16 min</h2>
+          <h2 class="destination-name">103rd/Stony Island</h2>
+          <h3 class="direction">Southbound</h3>
+          <h2 class="frequency">Frequency: every 15 min</h2>
         </div>
 
         <div class="times"> <!-- Column chunk for arrival -->
           <h2 class="actual-time">10:00 AM</h2>
           <h3 class="minutes">in 19 min</h3>
         </div>
-          <div class="break devon"></div>
-        </div>
 
-        <div class="arrow-right">
+        <div class="break stony"></div> <!-- used this to help get arrows aligned -->
+
+        <div class="arrow-right"> <!-- right arrow -->
           <i class="fa fa-angle-right" style="font-size:65px"></i>
         </div>
       </div>
+
     </div>
+  </div>
+
+
+
+
+
+
+
+
+
 
 
   </section>
