latest commit; finished adding all sections

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       </div>
     </div>
-  <!--================End of Navy Pier Eastbound ======================-->
+  <!--================END OF NAVY PIER EASTBOUND ============================-->
 
     <!-- Devon/Clark -->
     <div class="grid"> <!-- Individual boxes/rows -->
@@ -119,7 +119,7 @@
 
       </div>
     </div>
-  <!--================End of Devon/Clark ===================================-->
+  <!--================ END OF DEVON/CLARK ===================================-->
 
   <!-- 103rd/Stony Island -->
   <div class="grid"> <!-- Individual boxes/rows -->
@@ -149,17 +149,157 @@
 
     </div>
   </div>
+  <!--=================END OF 103rd/STONY ISLAND ============================-->
 
+  <!-- Navy Pier Southbound -->
+  <div class="grid"> <!-- Individual boxes/rows -->
+    <div class="content"> <!-- All the stuff inside the rows -->
+      <div class="green-indicator"></div>
 
+      <div class="inner-wrapper">
+        <h2 class="bus-number">124</h2> <!-- Column for bus number -->
 
+        <div class="location"> <!-- Column chunk for destination -->
+          <h2 class="destination-name">Navy Pier</h2>
+          <h3 class="direction">Southbound</h3>
+          <h2 class="frequency">Frequency: every 10 min</h2>
+        </div>
 
+        <div class="times"> <!-- Column chunk for arrival -->
+          <h2 class="actual-time">10:05 AM</h2>
+          <h3 class="minutes">in 24 min</h3>
+        </div>
 
+        <div class="break stony"></div> <!-- used this to help get arrows aligned -->
 
+        <div class="arrow-right"> <!-- right arrow -->
+          <i class="fa fa-angle-right" style="font-size:65px"></i>
+        </div>
+      </div>
 
+    </div>
+  </div>
+<!--================= END OF NAVY PIER SOUTHBOUND ============================-->
 
+<!-- Jackson Park Express -->
+<div class="grid"> <!-- Individual boxes/rows -->
+  <div class="content"> <!-- All the stuff inside the rows -->
+    <div class="orange-indicator"></div>
 
+    <div class="inner-wrapper">
+      <h2 class="bus-number">6X</h2> <!-- Column for bus number -->
 
+      <div class="location"> <!-- Column chunk for destination -->
+        <h2 class="destination-name">Jackson Park Express</h2>
+        <h3 class="direction">Reroute</h3>
+        <h2 class="frequency">Frequency: N/A</h2>
+      </div>
 
+      <div class="times"> <!-- Column chunk for arrival -->
+        <h2 class="actual-time">10:08 AM</h2>
+        <h3 class="minutes">in 27 min</h3>
+      </div>
+
+      <div class="break stony"></div> <!-- used this to help get arrows aligned -->
+
+      <div class="arrow-right"> <!-- right arrow -->
+        <i class="fa fa-angle-right" style="font-size:65px"></i>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!--================= END OF JACKSON PARK EXPRESS ============================-->
+
+<!-- Cottage Grove (Out of Service) -->
+<div class="grid"> <!-- Individual boxes/rows -->
+  <div class="content"> <!-- All the stuff inside the rows -->
+    <div class="red-indicator"></div>
+
+    <div class="inner-wrapper">
+      <h2 class="bus-number">4</h2> <!-- Column for bus number -->
+
+      <div class="location"> <!-- Column chunk for destination -->
+        <h2 class="destination-name">Cottage Grove</h2>
+        <h3 class="direction">Out of Service</h3>
+        <h2 class="frequency">Resumes 12:10 am</h2>
+      </div>
+
+      <div class="times"> <!-- Column chunk for arrival -->
+        <h2 class="actual-time">N/A</h2>
+        <h3 class="minutes"></h3>
+      </div>
+
+      <div class="break"></div> <!-- used this to help get arrows aligned -->
+
+      <div class="arrow-right"> <!-- right arrow -->
+        <i class="fa fa-angle-right" style="font-size:65px"></i>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!--================= END OF COTTAGE GROVE ===================================-->
+
+<!-- Madison -->
+<div class="grid"> <!-- Individual boxes/rows -->
+  <div class="content"> <!-- All the stuff inside the rows -->
+    <div class="red-indicator"></div>
+
+    <div class="inner-wrapper">
+      <h2 class="bus-number">20</h2> <!-- Column for bus number -->
+
+      <div class="location"> <!-- Column chunk for destination -->
+        <h2 class="destination-name">Madison</h2>
+        <h3 class="direction">Out of Service</h3>
+        <h2 class="frequency">Resumes 12:10 am</h2>
+      </div>
+
+      <div class="times"> <!-- Column chunk for arrival -->
+        <h2 class="actual-time">N/A</h2>
+        <h3 class="minutes"></h3>
+      </div>
+
+      <div class="break"></div> <!-- used this to help get arrows aligned -->
+
+      <div class="arrow-right"> <!-- right arrow -->
+        <i class="fa fa-angle-right" style="font-size:65px"></i>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!--================= END OF COTTAGE GROVE ===================================-->
+
+<!-- Streeterville/Taylor -->
+<div class="grid"> <!-- Individual boxes/rows -->
+  <div class="content"> <!-- All the stuff inside the rows -->
+    <div class="red-indicator"></div>
+
+    <div class="inner-wrapper">
+      <h2 class="bus-number">20</h2> <!-- Column for bus number -->
+
+      <div class="location"> <!-- Column chunk for destination -->
+        <h2 class="destination-name">Streeterville/Taylor</h2>
+        <h3 class="direction">Out of Service</h3>
+        <h2 class="frequency">Resumes 6:00 am</h2>
+      </div>
+
+      <div class="times"> <!-- Column chunk for arrival -->
+        <h2 class="actual-time">N/A</h2>
+        <h3 class="minutes"></h3>
+      </div>
+
+      <div class="break"></div> <!-- used this to help get arrows aligned -->
+
+      <div class="arrow-right"> <!-- right arrow -->
+        <i class="fa fa-angle-right" style="font-size:65px"></i>
+      </div>
+    </div>
+
+  </div>
+</div>
   </section>
 
 
