--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
     <nav>
       <img src="images/status-bar.png">
       <h1>Washington and State</h1>
+
+      <!-- Map Area -->
+      <section class="map-image">
+        <img src="images/map.png" class="static-photo" alt="map-view">
+      </section>
+
+      <!-- Destination/Route Info -->
+      <section class="list-header">
+        <h2 class="line">Line</h2>
+        <h2 class="destination">Destination</h2>
+        <h2 class="arrival">Arrival</h2>
+        <hr></hr>
+      </section>
+
     </nav>
 
-  <!-- Map Area -->
-  <section class="map-image">
-    <div class="inner-wrapper">
-    <img src="images/map.png" class="static-photo" alt="map-view">
-    </div>
-  </section>
 
-  <!-- Destination/Route Info -->
-  <section class="list-header">
-    <h2 class="line">Line</h2>
-    <h2 class="destination">Destination</h2>
-    <h2 class="arrival">Arrival</h2>
-  </section>
 
   <!-- RANDOLPH/HARBOR DR -->
   <section class="route-list">
-    <div class="grid"> <!-- Individual boxes/rows -->
+    <div class="grid scroll"> <!-- Individual boxes/rows -->
       <div class="content"> <!-- All the stuff inside the rows -->
         <div class="green-indicator"></div>
 
