--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
 <body>
@@ -14,6 +15,11 @@
     <!-- nav bar -->
     <nav>
       <img src="images/status-bar.png">
+
+      <div class="arrow-left">
+        <i class="fa fa-angle-left" style="font-size:90px"></i>
+      </div>
+
       <h1>Washington and State</h1>
 
       <!-- Map Area -->
@@ -21,17 +27,14 @@
         <img src="images/map.png" class="static-photo" alt="map-view">
       </section>
 
-      <!-- Destination/Route Info -->
+      <!-- Route Info Header -->
       <section class="list-header">
         <h2 class="line">Line</h2>
         <h2 class="destination">Destination</h2>
         <h2 class="arrival">Arrival</h2>
         <hr></hr>
       </section>
-
     </nav>
-
-
 
   <!-- RANDOLPH/HARBOR DR -->
   <section class="route-list">
@@ -142,7 +145,7 @@
           <h3 class="minutes">in 19 min</h3>
         </div>
 
-        <div class="break stony"></div> <!-- used this to help get arrows aligned -->
+        <div class="break align"></div> <!-- used this to help get arrows aligned -->
 
         <div class="arrow-right"> <!-- right arrow -->
           <i class="fa fa-angle-right" style="font-size:65px"></i>
@@ -172,7 +175,7 @@
           <h3 class="minutes">in 24 min</h3>
         </div>
 
-        <div class="break stony"></div> <!-- used this to help get arrows aligned -->
+        <div class="break align"></div> <!-- used this to help get arrows aligned -->
 
         <div class="arrow-right"> <!-- right arrow -->
           <i class="fa fa-angle-right" style="font-size:65px"></i>
@@ -202,7 +205,7 @@
         <h3 class="minutes">in 27 min</h3>
       </div>
 
-      <div class="break stony"></div> <!-- used this to help get arrows aligned -->
+      <div class="break align"></div> <!-- used this to help get arrows aligned -->
 
       <div class="arrow-right"> <!-- right arrow -->
         <i class="fa fa-angle-right" style="font-size:65px"></i>
@@ -302,13 +305,7 @@
 
   </div>
 </div>
-  </section>
-
-
-
-
-
-
-  </section>
-
+<!--============= END OF STREETERVILLE/TAYLOR =================================-->
+</section>
+</section>
 </body>
