--- a/index.html
+++ b/index.html
@@ -38,274 +38,240 @@
 
   <!-- RANDOLPH/HARBOR DR -->
   <section class="route-list">
-    <div class="grid scroll"> <!-- Individual boxes/rows -->
-      <div class="content"> <!-- All the stuff inside the rows -->
+    <li class="grid scroll"> <!-- Individual boxes/rows -->
+      <ul class="transit-info">
         <div class="green-indicator"></div>
 
-        <div class="inner-wrapper">
-          <h2 class="bus-number">60</h2> <!-- Column for bus number -->
+        <li class="bus-number">60</li> <!-- Column for bus number -->
+        <li class="location"> <!-- Column chunk for destination -->
+          <p class="destination-name">Randolph/Harbor Dr</p>
+          <p class="direction">Eastbound</p>
+          <p class="frequency">Frequency: every 20 min</p>
+        </li>
 
-          <div class="location"> <!-- Column chunk for destination -->
-            <h2 class="destination-name">Randolph/Harbor Dr</h2>
-            <h3 class="direction">Eastbound</h3>
-            <h2 class="frequency">Frequency: every 20 min</h2>
-          </div>
+        <li class="times"> <!-- Column chunk for arrival -->
+          <p class="actual-time">9:45 AM</p>
+          <p class="minutes">in 4 min</p>
+        </li>
 
-          <div class="times"> <!-- Column chunk for arrival -->
-            <h2 class="actual-time">9:45 AM</h2>
-            <h3 class="minutes">in 4 min</h3>
-          </div>
+        <div class="break"></div> <!-- used this to help get arrows aligned -->
 
-          <div class="break"></div> <!-- used this to help get arrows aligned -->
-          <div class="arrow-right"> <!-- right arrow -->
-            <i class="fa fa-angle-right" style="font-size:65px"></i>
-          </div>
+        <div class="arrow-right"> <!-- right arrow -->
+          <i class="fa fa-angle-right" style="font-size:65px"></i>
         </div>
-
-      </div>
-    </div>
+      </ul>
+    </li>
   <!--================= END OF RANDOLPH/HARBOR DR ==========================-->
 
     <!-- NAVY PIER EASTBOUND -->
-    <div class="grid"> <!-- Individual boxes/rows -->
-      <div class="content"> <!-- All the stuff inside the rows -->
+    <li class="grid"> <!-- Individual boxes/rows -->
+      <ul class="transit-info">
         <div class="green-indicator"></div>
 
-        <div class="inner-wrapper">
-          <h2 class="bus-number">124</h2> <!-- Column for bus number -->
+        <li class="bus-number">124</li> <!-- Column for bus number -->
+        <li class="location"> <!-- Column chunk for destination -->
+          <p class="destination-name">Navy Pier</p>
+          <p class="direction">Eastbound</p>
+          <p class="frequency">Frequency: every 10 min</p>
+        </li>
 
-          <div class="location"> <!-- Column chunk for destination -->
-            <h2 class="destination-name">Navy Pier</h2>
-            <h3 class="direction">Eastbound</h3>
-            <h2 class="frequency">Frequency: every 10 min</h2>
-          </div>
+        <li class="times"> <!-- Column chunk for arrival -->
+          <p class="actual-time">9:50 AM</p>
+          <p class="minutes">in 9 min</p>
+        </li>
 
-          <div class="times"> <!-- Column chunk for arrival -->
-            <h2 class="actual-time">9:50 AM</h2>
-            <h3 class="minutes">in 9 min</h3>
-          </div>
+        <div class="break"></div> <!-- used this to help get arrows aligned -->
 
-          <div class="break"></div> <!-- used this to help get arrows aligned -->
-
-          <div class="arrow-right"> <!-- right arrow -->
-            <i class="fa fa-angle-right" style="font-size:65px"></i>
-          </div>
+        <div class="arrow-right"> <!-- right arrow -->
+          <i class="fa fa-angle-right" style="font-size:65px"></i>
         </div>
-
-      </div>
-    </div>
+      </ul>
+    </li>
   <!--================END OF NAVY PIER EASTBOUND ============================-->
 
     <!-- Devon/Clark -->
-    <div class="grid"> <!-- Individual boxes/rows -->
-      <div class="content"> <!-- All the stuff inside the rows -->
+    <li class="grid"> <!-- Individual boxes/rows -->
+      <ul class="transit-info">
         <div class="green-indicator"></div>
 
-        <div class="inner-wrapper">
-          <h2 class="bus-number">151</h2> <!-- Column for bus number -->
+        <li class="bus-number">151</li> <!-- Column for bus number -->
+        <li class="location"> <!-- Column chunk for destination -->
+          <p class="destination-name">Devon/Clark</p>
+          <p class="direction">Northbound</p>
+          <p class="frequency">Frequency: every 16 min</p>
+        </li>
 
-          <div class="location"> <!-- Column chunk for destination -->
-            <h2 class="destination-name">Devon/Clark</h2>
-            <h3 class="direction">Northbound</h3>
-            <h2 class="frequency">Frequency: every 16 min</h2>
-          </div>
+        <li class="times"> <!-- Column chunk for arrival -->
+          <p class="actual-time">9:52 AM</p>
+          <p class="minutes">in 11 min</p>
+        </li>
 
-          <div class="times"> <!-- Column chunk for arrival -->
-            <h2 class="actual-time">9:52 AM</h2>
-            <h3 class="minutes">in 11 min</h3>
-          </div>
+        <div class="break"></div> <!-- used this to help get arrows aligned -->
 
-          <div class="break"></div> <!-- used this to help get arrows aligned -->
-
-          <div class="arrow-right"> <!-- right arrow -->
-            <i class="fa fa-angle-right" style="font-size:65px"></i>
-          </div>
+        <div class="arrow-right"> <!-- right arrow -->
+          <i class="fa fa-angle-right" style="font-size:65px"></i>
         </div>
-
-      </div>
-    </div>
+      </ul>
+    </li>
   <!--================ END OF DEVON/CLARK ===================================-->
 
   <!-- 103rd/Stony Island -->
-  <div class="grid"> <!-- Individual boxes/rows -->
-    <div class="content"> <!-- All the stuff inside the rows -->
+  <li class="grid"> <!-- Individual boxes/rows -->
+    <ul class="transit-info">
       <div class="green-indicator"></div>
 
-      <div class="inner-wrapper">
-        <h2 class="bus-number">J14</h2> <!-- Column for bus number -->
+      <li class="bus-number">J14</li> <!-- Column for bus number -->
+      <li class="location"> <!-- Column chunk for destination -->
+        <p class="destination-name">103rd/Stony Island</p>
+        <p class="direction">Southbound</p>
+        <p class="frequency">Frequency: every 15 min</p>
+      </li>
 
-        <div class="location"> <!-- Column chunk for destination -->
-          <h2 class="destination-name">103rd/Stony Island</h2>
-          <h3 class="direction">Southbound</h3>
-          <h2 class="frequency">Frequency: every 15 min</h2>
-        </div>
+      <li class="times"> <!-- Column chunk for arrival -->
+        <p class="actual-time">10:00 AM</p>
+        <p class="minutes">in 19 min</p>
+      </li>
 
-        <div class="times"> <!-- Column chunk for arrival -->
-          <h2 class="actual-time">10:00 AM</h2>
-          <h3 class="minutes">in 19 min</h3>
-        </div>
+      <div class="break"></div> <!-- used this to help get arrows aligned -->
 
-        <div class="break align"></div> <!-- used this to help get arrows aligned -->
-
-        <div class="arrow-right"> <!-- right arrow -->
-          <i class="fa fa-angle-right" style="font-size:65px"></i>
-        </div>
+      <div class="arrow-right"> <!-- right arrow -->
+        <i class="fa fa-angle-right" style="font-size:65px"></i>
       </div>
-
-    </div>
-  </div>
+    </ul>
+  </li>
   <!--=================END OF 103rd/STONY ISLAND ============================-->
 
   <!-- Navy Pier Southbound -->
-  <div class="grid"> <!-- Individual boxes/rows -->
-    <div class="content"> <!-- All the stuff inside the rows -->
+  <li class="grid"> <!-- Individual boxes/rows -->
+    <ul class="transit-info">
       <div class="green-indicator"></div>
 
-      <div class="inner-wrapper">
-        <h2 class="bus-number">124</h2> <!-- Column for bus number -->
+      <li class="bus-number">124</li> <!-- Column for bus number -->
+      <li class="location"> <!-- Column chunk for destination -->
+        <p class="destination-name">Navy Pier</p>
+        <p class="direction">Southbound</p>
+        <p class="frequency">Frequency: every 10 min</p>
+      </li>
 
-        <div class="location"> <!-- Column chunk for destination -->
-          <h2 class="destination-name">Navy Pier</h2>
-          <h3 class="direction">Southbound</h3>
-          <h2 class="frequency">Frequency: every 10 min</h2>
-        </div>
-
-        <div class="times"> <!-- Column chunk for arrival -->
-          <h2 class="actual-time">10:05 AM</h2>
-          <h3 class="minutes">in 24 min</h3>
-        </div>
-
-        <div class="break align"></div> <!-- used this to help get arrows aligned -->
-
-        <div class="arrow-right"> <!-- right arrow -->
-          <i class="fa fa-angle-right" style="font-size:65px"></i>
-        </div>
-      </div>
-
-    </div>
-  </div>
-<!--================= END OF NAVY PIER SOUTHBOUND ============================-->
-
-<!-- Jackson Park Express -->
-<div class="grid"> <!-- Individual boxes/rows -->
-  <div class="content"> <!-- All the stuff inside the rows -->
-    <div class="orange-indicator"></div>
-
-    <div class="inner-wrapper">
-      <h2 class="bus-number">6X</h2> <!-- Column for bus number -->
-
-      <div class="location"> <!-- Column chunk for destination -->
-        <h2 class="destination-name">Jackson Park Express</h2>
-        <h3 class="direction">Reroute</h3>
-        <h2 class="frequency">Frequency: N/A</h2>
-      </div>
-
-      <div class="times"> <!-- Column chunk for arrival -->
-        <h2 class="actual-time">10:08 AM</h2>
-        <h3 class="minutes">in 27 min</h3>
-      </div>
-
-      <div class="break align"></div> <!-- used this to help get arrows aligned -->
-
-      <div class="arrow-right"> <!-- right arrow -->
-        <i class="fa fa-angle-right" style="font-size:65px"></i>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-<!--================= END OF JACKSON PARK EXPRESS ============================-->
-
-<!-- Cottage Grove (Out of Service) -->
-<div class="grid"> <!-- Individual boxes/rows -->
-  <div class="content"> <!-- All the stuff inside the rows -->
-    <div class="red-indicator"></div>
-
-    <div class="inner-wrapper">
-      <h2 class="bus-number">4</h2> <!-- Column for bus number -->
-
-      <div class="location"> <!-- Column chunk for destination -->
-        <h2 class="destination-name">Cottage Grove</h2>
-        <h3 class="direction">Out of Service</h3>
-        <h2 class="frequency">Resumes 12:10 am</h2>
-      </div>
-
-      <div class="times"> <!-- Column chunk for arrival -->
-        <h2 class="actual-time">N/A</h2>
-        <h3 class="minutes"></h3>
-      </div>
+      <li class="times"> <!-- Column chunk for arrival -->
+        <p class="actual-time">10:05 AM</p>
+        <p class="minutes">in 24 min</p>
+      </li>
 
       <div class="break"></div> <!-- used this to help get arrows aligned -->
 
       <div class="arrow-right"> <!-- right arrow -->
         <i class="fa fa-angle-right" style="font-size:65px"></i>
       </div>
-    </div>
+    </ul>
+  </li>
+  <!--================= END OF NAVY PIER SOUTHBOUND ============================-->
 
-  </div>
-</div>
-<!--================= END OF COTTAGE GROVE ===================================-->
+  <!-- Jackson Park Express -->
+  <li class="grid"> <!-- Individual boxes/rows -->
+    <ul class="transit-info">
+      <div class="orange-indicator"></div>
 
-<!-- Madison -->
-<div class="grid"> <!-- Individual boxes/rows -->
-  <div class="content"> <!-- All the stuff inside the rows -->
-    <div class="red-indicator"></div>
+      <li class="bus-number">6X</li> <!-- Column for bus number -->
+      <li class="location"> <!-- Column chunk for destination -->
+        <p class="destination-name">Jackson Park Express</p>
+        <p class="direction">Reroute</p>
+        <p class="frequency">Frequency: N/A</p>
+      </li>
 
-    <div class="inner-wrapper">
-      <h2 class="bus-number">20</h2> <!-- Column for bus number -->
-
-      <div class="location"> <!-- Column chunk for destination -->
-        <h2 class="destination-name">Madison</h2>
-        <h3 class="direction">Out of Service</h3>
-        <h2 class="frequency">Resumes 12:10 am</h2>
-      </div>
-
-      <div class="times"> <!-- Column chunk for arrival -->
-        <h2 class="actual-time">N/A</h2>
-        <h3 class="minutes"></h3>
-      </div>
+      <li class="times"> <!-- Column chunk for arrival -->
+        <p class="actual-time">10:08 AM</p>
+        <p class="minutes">in 27 min</p>
+      </li>
 
       <div class="break"></div> <!-- used this to help get arrows aligned -->
 
       <div class="arrow-right"> <!-- right arrow -->
         <i class="fa fa-angle-right" style="font-size:65px"></i>
       </div>
-    </div>
+    </ul>
+  </li>
 
-  </div>
-</div>
-<!--================= END OF COTTAGE GROVE ===================================-->
+  <!--================= END OF JACKSON PARK EXPRESS ============================-->
 
-<!-- Streeterville/Taylor -->
-<div class="grid"> <!-- Individual boxes/rows -->
-  <div class="content"> <!-- All the stuff inside the rows -->
-    <div class="red-indicator"></div>
+  <!-- Cottage Grove (Out of Service) -->
+  <li class="grid"> <!-- Individual boxes/rows -->
+    <ul class="transit-info">
+      <div class="red-indicator"></div>
 
-    <div class="inner-wrapper">
-      <h2 class="bus-number">157</h2> <!-- Column for bus number -->
+      <li class="bus-number">4</li> <!-- Column for bus number -->
+      <li class="location"> <!-- Column chunk for destination -->
+        <p class="destination-name">Cottage Grove</p>
+        <p class="direction">Out of Service</p>
+        <p class="frequency">Resumes 12:10 am</p>
+      </li>
 
-      <div class="location"> <!-- Column chunk for destination -->
-        <h2 class="destination-name">Streeterville/Taylor</h2>
-        <h3 class="direction">Out of Service</h3>
-        <h2 class="frequency">Resumes 6:00 am</h2>
-      </div>
-
-      <div class="times"> <!-- Column chunk for arrival -->
-        <h2 class="actual-time">N/A</h2>
-        <h3 class="minutes"></h3>
-      </div>
+      <li class="times"> <!-- Column chunk for arrival -->
+        <p class="actual-time">N/A</p>
+        <p class="minutes"></p>
+      </li>
 
       <div class="break"></div> <!-- used this to help get arrows aligned -->
 
       <div class="arrow-right"> <!-- right arrow -->
         <i class="fa fa-angle-right" style="font-size:65px"></i>
       </div>
-    </div>
+    </ul>
+  </li>
+  <!--================= END OF COTTAGE GROVE ===================================-->
 
-  </div>
-</div>
-<!--============= END OF STREETERVILLE/TAYLOR =================================-->
+  <!-- Madison -->
+  <li class="grid"> <!-- Individual boxes/rows -->
+    <ul class="transit-info">
+      <div class="red-indicator"></div>
+
+      <li class="bus-number">20</li> <!-- Column for bus number -->
+      <li class="location"> <!-- Column chunk for destination -->
+        <p class="destination-name">Madison</p>
+        <p class="direction">Out of Service</p>
+        <p class="frequency">Resumes 12:10 am</p>
+      </li>
+
+      <li class="times"> <!-- Column chunk for arrival -->
+        <p class="actual-time">N/A</p>
+        <p class="minutes"></p>
+      </li>
+
+      <div class="break"></div> <!-- used this to help get arrows aligned -->
+
+      <div class="arrow-right"> <!-- right arrow -->
+        <i class="fa fa-angle-right" style="font-size:65px"></i>
+      </div>
+    </ul>
+  </li>
+  <!--================= END OF COTTAGE GROVE ===================================-->
+
+  <!-- Streeterville/Taylor -->
+  <li class="grid"> <!-- Individual boxes/rows -->
+    <ul class="transit-info">
+      <div class="red-indicator"></div>
+
+      <li class="bus-number">157</li> <!-- Column for bus number -->
+      <li class="location"> <!-- Column chunk for destination -->
+        <p class="destination-name">Streeterville/Taylor</p>
+        <p class="direction">Out of Service</p>
+        <p class="frequency">Resumes 6:00 am</p>
+      </li>
+
+      <li class="times"> <!-- Column chunk for arrival -->
+        <p class="actual-time">N/A</p>
+        <p class="minutes"></p>
+      </li>
+
+      <div class="break"></div> <!-- used this to help get arrows aligned -->
+
+      <div class="arrow-right"> <!-- right arrow -->
+        <i class="fa fa-angle-right" style="font-size:65px"></i>
+      </div>
+    </ul>
+  </li>
+  <!--============= END OF STREETERVILLE/TAYLOR =================================-->
+
 </section>
 </section>
 </body>
