realigned the arrows

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Front-End Challenge</title>
+    <title>BusyBus Prototype</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,900" rel="stylesheet">
@@ -132,7 +132,7 @@
         <p class="minutes">in 19 min</p>
       </li>
 
-      <div class="break"></div> <!-- used this to help get arrows aligned -->
+      <div class="break align"></div> <!-- used this to help get arrows aligned -->
 
       <div class="arrow-right"> <!-- right arrow -->
         <i class="fa fa-angle-right" style="font-size:65px"></i>
@@ -158,7 +158,7 @@
         <p class="minutes">in 24 min</p>
       </li>
 
-      <div class="break"></div> <!-- used this to help get arrows aligned -->
+      <div class="break align"></div> <!-- used this to help get arrows aligned -->
 
       <div class="arrow-right"> <!-- right arrow -->
         <i class="fa fa-angle-right" style="font-size:65px"></i>
@@ -184,7 +184,7 @@
         <p class="minutes">in 27 min</p>
       </li>
 
-      <div class="break"></div> <!-- used this to help get arrows aligned -->
+      <div class="break align"></div> <!-- used this to help get arrows aligned -->
 
       <div class="arrow-right"> <!-- right arrow -->
         <i class="fa fa-angle-right" style="font-size:65px"></i>
