--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section class="route-list">
     <li class="grid scroll"> <!-- Individual boxes/rows -->
       <ul class="transit-info">
-        <div class="green-indicator"></div>
+        <div class="in-service"></div>
 
         <li class="bus-number">60</li> <!-- Column for bus number -->
         <li class="location"> <!-- Column chunk for destination -->
@@ -66,7 +66,7 @@
     <!-- NAVY PIER EASTBOUND -->
     <li class="grid"> <!-- Individual boxes/rows -->
       <ul class="transit-info">
-        <div class="green-indicator"></div>
+        <div class="in-service"></div>
 
         <li class="bus-number">124</li> <!-- Column for bus number -->
         <li class="location"> <!-- Column chunk for destination -->
@@ -92,7 +92,7 @@
     <!-- Devon/Clark -->
     <li class="grid"> <!-- Individual boxes/rows -->
       <ul class="transit-info">
-        <div class="green-indicator"></div>
+        <div class="in-service"></div>
 
         <li class="bus-number">151</li> <!-- Column for bus number -->
         <li class="location"> <!-- Column chunk for destination -->
@@ -118,7 +118,7 @@
   <!-- 103rd/Stony Island -->
   <li class="grid"> <!-- Individual boxes/rows -->
     <ul class="transit-info">
-      <div class="green-indicator"></div>
+      <div class="in-service"></div>
 
       <li class="bus-number">J14</li> <!-- Column for bus number -->
       <li class="location"> <!-- Column chunk for destination -->
@@ -144,7 +144,7 @@
   <!-- Navy Pier Southbound -->
   <li class="grid"> <!-- Individual boxes/rows -->
     <ul class="transit-info">
-      <div class="green-indicator"></div>
+      <div class="in-service"></div>
 
       <li class="bus-number">124</li> <!-- Column for bus number -->
       <li class="location"> <!-- Column chunk for destination -->
@@ -170,7 +170,7 @@
   <!-- Jackson Park Express -->
   <li class="grid"> <!-- Individual boxes/rows -->
     <ul class="transit-info">
-      <div class="orange-indicator"></div>
+      <div class="reroute"></div>
 
       <li class="bus-number">6X</li> <!-- Column for bus number -->
       <li class="location"> <!-- Column chunk for destination -->
@@ -197,7 +197,7 @@
   <!-- Cottage Grove (Out of Service) -->
   <li class="grid"> <!-- Individual boxes/rows -->
     <ul class="transit-info">
-      <div class="red-indicator"></div>
+      <div class="out-of-service"></div>
 
       <li class="bus-number">4</li> <!-- Column for bus number -->
       <li class="location"> <!-- Column chunk for destination -->
@@ -223,7 +223,7 @@
   <!-- Madison -->
   <li class="grid"> <!-- Individual boxes/rows -->
     <ul class="transit-info">
-      <div class="red-indicator"></div>
+      <div class="out-of-service"></div>
 
       <li class="bus-number">20</li> <!-- Column for bus number -->
       <li class="location"> <!-- Column chunk for destination -->
@@ -249,7 +249,7 @@
   <!-- Streeterville/Taylor -->
   <li class="grid"> <!-- Individual boxes/rows -->
     <ul class="transit-info">
-      <div class="red-indicator"></div>
+      <div class="out-of-service"></div>
 
       <li class="bus-number">157</li> <!-- Column for bus number -->
       <li class="location"> <!-- Column chunk for destination -->
